--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div class="stat-item">Aprobadas: <span id="aprobadas-count">0</span></div>
             <div class="stat-item">Regulares: <span id="regulares-count">0</span></div>
             <div class="stat-item">Pendientes: <span id="pendientes-count">0</span></div>
-            <div class="stat-item">Promedio: <span id="promedio-final">N/A</span></div>
+            <div class="stat-item">Promedio (c/CBC): <span id="promedio-con-cbc">N/A</span></div>
+            <div class="stat-item">Promedio (s/CBC): <span id="promedio-sin-cbc">N/A</span></div>
             <div class="stat-item">Materias: <span id="materias-progreso">0/0</span></div>
         </div>
         <div id="plan-de-estudios">
