--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Cormorant+Garamond:wght@600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="main-container">
@@ -16,8 +21,8 @@
             <div class="stat-item">Aprobadas: <span id="aprobadas-count">0</span></div>
             <div class="stat-item">Regulares: <span id="regulares-count">0</span></div>
             <div class="stat-item">Pendientes: <span id="pendientes-count">0</span></div>
-            <div class="stat-item">Promedio (c/CBC): <span id="promedio-con-cbc">N/A</span></div>
-            <div class="stat-item">Promedio (s/CBC): <span id="promedio-sin-cbc">N/A</span></div>
+            <div class="stat-item">Promedio: <span id="promedio-final">N/A</span></div>
+            <div class="stat-item">Promedio s/ CBC: <span id="promedio-sin-cbc">N/A</span></div>
             <div class="stat-item">Materias: <span id="materias-progreso">0/0</span></div>
         </div>
         <div id="plan-de-estudios">
